Scrollbars issue resolved and also video tutorials

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -37,15 +37,35 @@ $theme-colors: (
     background-color: rgba($color: #000000, $alpha: 0.3);
   }
 }
+
+.eventModalBox {
+  height: 92vh;
+  @media only screen and (max-width: 500px) {
+    height: 100%;
+  }
+}
+.eventModalDetailsBox {
+  overflow: auto;
+  @media only screen and (max-width: 500px) {
+    overflow: hidden;
+  }
+}
+
 .w-30 {
   width: 30%;
+  @media only screen and (max-width: 500px) {
+    width: 100%;
+  }
 }
 .w-70 {
   width: 70%;
+  @media only screen and (max-width: 500px) {
+    width: 100%;
+  }
 }
 
 .eventBox {
-  min-width: 260px;
+  min-width: 265px;
   margin: " 10px 10px";
   overflow-y: auto;
   position: relative;
@@ -102,43 +122,34 @@ td {
   }
 }
 
-// .scrollbar {
-//   overflow: overlay;
-// }
+.IFCMenu {
+  list-style: none;
+  @media only screen and (max-width: 500px) {
+    width: 100% !important;
+    background-color: rgba(197, 198, 199, 1) !important;
 
-// /* total width */
-// .scrollbar::-webkit-scrollbar {
-//   background-color: rgba(0, 0, 0, 0);
-//   width: 16px;
-//   height: 16px;
-//   z-index: 999999;
-// }
+    overflow: auto;
+  }
+}
 
-// /* background of the scrollbar except button or resizer */
-// .scrollbar::-webkit-scrollbar-track {
-//   background-color: rgba(0, 0, 0, 0);
-// }
+/* width */
+::-webkit-scrollbar {
+  width: 7px;
+  height: 7px;
+}
 
-// /* scrollbar itself */
-// .scrollbar::-webkit-scrollbar-thumb {
-//   background-color: rgba(0, 0, 0, 0);
-//   border-radius: 16px;
-//   border: 0px solid #fff;
-// }
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f7f7f7;
+}
 
-// /* set button(top and bottom of the scrollbar) */
-// .scrollbar::-webkit-scrollbar-button {
-//   display: none;
-// }
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #ccc;
+  border-radius: 10px;
+}
 
-// /* scrollbar when element is hovered */
-// .scrollbar:hover::-webkit-scrollbar-thumb {
-//   background-color: #a0a0a5;
-//   border: 4px solid #fff;
-// }
-
-// /* scrollbar when scrollbar is hovered */
-// .scrollbar::-webkit-scrollbar-thumb:hover {
-//   background-color: #a0a0a5;
-//   border: 4px solid #f4f4f4;
-// }
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #9999;
+}
